# leRH

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  RAPPORT_CV_LETTRE_SKILLS.md  README.md  alembic.ini  deployement.yaml  deployment.yml  pyproject.toml  test_empty.py  test_nemotron.py  test_openai_parse.py
adapters/whatsapp/: package-lock.json  package.json  tsconfig.json
adapters/whatsapp/src/: api-client.ts  bot.ts
docs/: brainstorming-ia-emploi-togo.md  job_search_assistant_config.json  marche-emploi-togo-systeme.md  rapport_principe_1.md  rapport_principe_2.md  rapport_principe_3.md  rapport_principe_4.md  rapport_principe_5.md  rapport_principe_6.md  rapport_principe_7.md  rapport_principe_8.md
scratch/: check_db.py  check_db_v2.py  clear_db.py  test_db_lock_fix.py
scripts/: backfill_enrich.py  import_search_jobs.py  run_scrapers.py
src/leRH/: config.py  main.py
src/leRH/adapters/telegram/: bot.py
src/leRH/adapters/telegram/handlers/: conversation.py  documents.py  messages.py
src/leRH/api/: app.py
src/leRH/api/middleware/: auth.py  logging.py
src/leRH/api/routers/: applications.py  documents.py  health.py  jobs.py  matching.py  profiles.py  subscriptions.py  users.py  whatsapp.py
src/leRH/core/: bot_registry.py  conversation.py  credits.py  user_commands.py
src/leRH/core/assistants/: manager.py  persona.py
src/leRH/core/batch/: document_tasks.py  jobs.py  scheduler.py
src/leRH/core/documents/: generator.py
src/leRH/core/matching/: engine.py
src/leRH/core/pipeline/: job_enricher.py
src/leRH/core/profiles/: extractor.py
src/leRH/core/scraping/: base.py  emploi_tg.py  types.py
src/leRH/core/tools/: job_search.py
src/leRH/db/: base.py  models.py  repository.py
src/leRH/db/alembic/: env.py
src/leRH/db/alembic/versions/: 001_initial.py  002_add_conversation.py  003_add_subscriptions.py  004_add_credits.py  0487d528890c_add_email_and_address_to_user.py  (+7 more)
src/leRH/schemas/: __init__.py
src/leRH/services/: audio_processor.py  translation.py  tts.py
src/leRH/utils/: rate_limiter.py  shared_rate_limiter.py
tests/: conftest.py  test_persistence.py
tests/test_api/: test_api.py  test_applications_api.py  test_jobs_api.py  test_matching_api.py  test_profiles_api.py
tests/test_core/: test_assistant.py  test_db.py  test_documents.py  test_job_notifications.py  test_matching.py  test_profiles.py  test_user_commands.py
