[project]
name = "leRH"
version = "0.1.0"
description = "Plateforme de recrutement multi-canal pour le Togo — Telegram + WhatsApp"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Crucial Digital" }]

dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "PyPDF2>=3.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "ddgs>=9.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "python-docx>=1.1.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",

    "ruff>=0.6",
    "pre-commit>=3.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "B008", # do-not-perform-function-calls-in-argument-defaults
    "N999", # invalid-module-name (leRH is intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["leRH"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/leRH --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/leRH"]
omit = [
    "tests/*",
    "src/leRH/__init__.py",
    "src/leRH/main.py",
    "src/leRH/adapters/telegram/*",
    "src/leRH/core/assistants/*",
    "src/leRH/core/batch/*",
    "src/leRH/core/pipeline/*",
    "src/leRH/core/scraping/*",
    "src/leRH/services/*",
    "src/leRH/api/routers/subscriptions.py",
]

[tool.coverage.report]
fail_under = 70
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
